<resources>
    <string name="app_name">LoginAndCalculator</string>
    <string name="question">Please Calculate %.0f %c %.0f = ?</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="equals">%.0f %c %.0f = %d</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_point">.</string>
    <string name="button_clr">C</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_mul">*</string>
    <string name="button_div">/</string>
    <string name="err_un_empty">username is empty</string>
    <string name="err_pw_empty">password is empty</string>
    <string name="err_un_false">username is wrong</string>
    <string name="err_pw_false">password is wrong</string>
    <string name="getin">getting in!</string>
    <string name="right_text">You finish the question!</string>
    <string name="wrong_text">You did not make it!</string>
</resources>
