<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
<TextView
    android:id="@+id/text_question"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question"
    android:textSize="20sp"
    android:layout_gravity="center"/>
    <GridLayout
        android:rowCount="2"
        android:columnCount="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:selectAllOnFocus="true"
            android:textColorHint="#95A1AA"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:selectAllOnFocus="true"
            android:textColorHint="#95A1AA"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"/>
    </GridLayout>

</LinearLayout>